--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ serde_json = "1.0.64"
 sqlx = { version = "0.5.4", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
 tokio = { version = "1.6.0", features = ["full"] }
 tracing = "0.1.26"
+tracing-subscriber = { version = "0.2.18", features = ["registry",
+"env-filter"] }
 url = "2.2.2"
