--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.40"
+config = "0.11.0"
 hyper = "0.14.7"
+lazy_static = "1.4.0"
 routerify = "2.0.2"
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
